--- a/films.html
+++ b/films.html
@@ -7,15 +7,15 @@
 		<!--Metatags-->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
+		<meta name="description" content="Découvrez la programmation complète du Festival des Films de Plein Air : 12 films d’auteur à voir sous les étoiles du 5 au 7 août 2025 à Paris.">
 		
 		<!--Open graph data-->
-		<meta property="og:title" content=""/>
-		<meta property="og:type" content=""/>
-		<meta property="og:url" content=""/>
-		<meta property="og:image" content=""/>
-		<meta property="og:description" content=""/>
-		
+		<meta property="og:title" content="Les Films - Festival des Films de Plein Air"/>
+		<meta property="og:type" content="website"/>
+		<meta property="og:url" content="https://yuhan-ux.github.io/festival/films.html"/>
+		<meta property="og:image" content="https://yuhan-ux.github.io/festival/images/og-film.jpg"/>
+		<meta property="og:description" content="Explorez la sélection des 12 films projetés en plein air au Parc Monceau. Une expérience cinématographique unique sous les étoiles de Paris."/>
+			
 	<!--fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
 	
@@ -60,7 +60,7 @@
 				</aside>
 				<article class="col-sm-8">
 				  <h2>Nomadland</h2>
-				  <h3>🗓 Séance : Mardi 5 août 2025, 21h00</h3>
+				  <h3>🗓 Séance : Mardi 5 août 2025, 19h00</h3>
 				  <h3>🌟 Un voyage intérieur au cœur de la nature</h3>
 				  <div class="note">
 					<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
@@ -84,7 +84,7 @@
 			<div class="row film02">
 				<article class="col-sm-8">
 					<h2>INTO THE WILD</h2>
-					<h3>🗓 Séance : Mardi 5 août 2025, 21h00</h3>
+					<h3>🗓 Séance : Mardi 5 août 2025, 21h30</h3>
 					<h3>🌟 Un voyage intérieur au cœur de la nature</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -93,9 +93,9 @@
 						<i class="far fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
-					<p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit<p>
+					<p>Un jeune diplômé abandonne tout pour vivre dans la nature sauvage d’Alaska. Une quête de vérité et de rupture.<p>
 
-						<span><strong>Date de sortie :</strong> 2007</span>
+						<span><strong>Date de sortie :</strong> 2008</span>
 						<br><span><strong>Durée :</strong> 2h28</span>
 						<br><span><strong>De :</strong> Sean Penn</span>
 						<br><span><strong>Avec :</strong> Emile Hirsch, Kristen Stewart</span>
@@ -111,7 +111,7 @@
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
 					<h2>MITTY</h2>
-					<h3>🗓 Séance : Mardi 5 août 2025, 21h00</h3>
+					<h3>🗓 Séance : Mardi 5 août 2025, 11h00</h3>
 					<h3>🌟 Un voyage intérieur au cœur de la nature</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -121,10 +121,10 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						Employé discret, Walter s’évade dans ses rêves... jusqu’au jour où il part à l’aventure dans le monde réel.
                     </p>
                     <p>
-						<span><strong>Date de sortie :</strong> 2007</span>
+						<span><strong>Date de sortie :</strong> 2011</span>
 						<br><span><strong>Durée :</strong> 2h28</span>
 						<br><span><strong>De :</strong> Sean Penn</span>
 						<br><span><strong>Avec :</strong> Emile Hirsch, Kristen Stewart</span>
@@ -158,7 +158,7 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						Un étudiant français part à Barcelone en Erasmus et découvre la vie en colocation multiculturelle pleine de surprises.
                     </p>
 					<p>
 						<span><strong>Date de sortie :</strong> 2007</span>
@@ -185,7 +185,7 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						Une jeune Australienne traverse 2700 km de désert avec ses chameaux et son chien. Un voyage initiatique intense.
                     </p>
 					<p>
 						<span><strong>Date de sortie :</strong> 2007</span>
@@ -214,7 +214,7 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						Un père et son fils partent en voiture de France à La Mecque. Une route faite de silences, de tensions et de liens retrouvés.
                     </p>
 					<p>
 						<span><strong>Date de sortie :</strong> 2007</span>
@@ -251,7 +251,7 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						Avant de devenir Che Guevara, Ernesto traverse l’Amérique du Sud à moto. Un regard bouleversant sur les injustices sociales.
                     </p>
 					<p>
 						<span><strong>Date de sortie :</strong> 2007</span>
@@ -278,7 +278,7 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						Neuf ans après leurs retrouvailles, Jesse et Céline se confrontent aux réalités de la vie de couple. Un amour en maturité.
                     </p>
 					<p>
 						<span><strong>Date de sortie :</strong> 2007</span>
@@ -297,7 +297,7 @@
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
 					<h2>Lost In Translation</h2>
-					<h3>🗓 Séance : Mardi 5 août 2025, 21h00</h3>
+					<h3>🗓 Séance : Mercredi 6 août 2025, 21h00</h3>
 					<h3>🌟 Un voyage intérieur au cœur de la nature</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -307,7 +307,7 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						À Tokyo, deux âmes perdues se rencontrent dans un hôtel. Une parenthèse délicate sur l’ennui et la connexion humaine.
                     </p>
 					<p>
 						<span><strong>Date de sortie :</strong> 2007</span>
@@ -334,7 +334,7 @@
 					<aside class="col-sm-4"></aside>
 					<article class="col-sm-8">
 						<h2>PARIS,TEXAS</h2>
-						<h3>🗓 Séance : Mardi 5 août 2025, 21h00</h3>
+						<h3>🗓 Séance : Mercredi 6 août 2025, 21h00</h3>
 						<h3>🌟 Un voyage intérieur au cœur de la nature</h3>
 						<div class="note">
 							<i class="fas fa-star"></i>
@@ -344,7 +344,7 @@
 							<i class="far fa-star"></i>
 						</div>
 						<p>
-                            In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+							Un homme réapparaît après quatre ans d’errance. Un road-movie sobre et poignant sur la rédemption.
                         </p>
 						<p>
 							<span><strong>Date de sortie :</strong> 2007</span>
@@ -371,7 +371,7 @@
 							<i class="far fa-star"></i>
 						</div>
 						<p>
-                            In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+                            Une mère part à la recherche de sa fille partie faire le djihad. Un voyage bouleversant entre peur, amour et espoir.
                         </p>
 						<p>
 							<span><strong>Date de sortie :</strong> 2007</span>
@@ -400,7 +400,7 @@
 							<i class="far fa-star"></i>
 						</div>
 						<p>
-                            In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+                            Pour se reconstruire, Cheryl marche seule plus de 1600 km sur le Pacific Crest Trail. Une aventure de pardon et de renaissance.
                         </p>
 						<p>
 							<span><strong>Date de sortie :</strong> 2007</span>
