--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Accueil | Festival des Films de Plein Air</title>
-		
+		<html lang="fr">
 		<!--Metatags-->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,7 +21,7 @@
 		<!--CSS-->
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<!--<link rel="stylesheet" href="css/style.css">-->
-		<link rel="stylesheet" href="css/stylescss.css">
+		<link rel="stylesheet" href="css/stylescss_3.css">
 		<link rel="stylesheet"  href="webfonts/all.css">
 		
 	</head>
@@ -30,7 +30,7 @@
 		<!--00.header-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 			<a class="navbar-brand" href="#">
-				<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" />
+				<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival" />
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -115,7 +115,7 @@
 						<h2 id="news">Actualités du Festival</h2>
 						<p>🎬 L'édition 2025 du Festival des Films de Plein Air aura lieu du <strong>5 au 7 août</strong> au Parc Monceau. Préparez-vous à voyager à travers une sélection exceptionnelle de films d’auteur autour du thème « Le voyage ».
 						</p>
-						<p>-Lien possible-<a href="https://www.festivalpleinair.com/">ici</a>.</p>
+						<p>-Lien possible-<a href="https://www.festivalpleinair.com/" style="text-decoration: underline;">ici</a>.</p>
 						<p>🤝 Cette année, nous avons le plaisir de collaborer avec de nouveaux partenaires, dont <strong>France Télévision</strong> et la <strong>Région Île-de-France</strong>.</p>
 						<a href="rendez-vous-le-05-aout.html" class="btn btn-custom">Lire la suite</a>
 					</article>
@@ -343,9 +343,9 @@
 		<div class="col-12 text-center mt-4">
 		  <h5>📣 Suivez-nous</h5>
 		  <div class="socialicons d-flex justify-content-center gap-3 mt-2">
-			<a href="https://www.facebook.com"><i class="fab fa-facebook-f fa-lg"></i></a>
-			<a href="https://www.youtube.com"><i class="fab fa-youtube fa-lg"></i></a>
-			<a href="https://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
+			<a href="https://www.facebook.com"  aria-label="Facebook"><i class="fab fa-facebook-f fa-lg"></i></a>
+			<a href="https://www.youtube.com"  aria-label="Youtube"><i class="fab fa-youtube fa-lg"></i></a>
+			<a href="https://www.instagram.com"  aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
 		  </div>
 		</div>
   
