--- a/index.html
+++ b/index.html
@@ -246,9 +246,18 @@
 		<section class="container-fluid contact">
 			<div class="container">
 				<div class="row">
-					<aside class="col-lg-6">
-						<img src="images/carte.jpg" alt="Carte du Parc Monceau" class="img-fluid" style=" padding-top: 35px; height: 60%;">
+					<aside class="col-lg-6" style="padding-top: 35px;">
+						<iframe 
+						  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.843236364008!2d2.3091703767124353!3d48.87914237133659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fdf18a65e9f%3A0x1a8d022eab6740ef!2sParc%20Monceau!5e0!3m2!1sfr!2sfr!4v1712593629852!5m2!1sfr!2sfr" 
+						  width="100%" 
+						  height="350" 
+						  style="border:0;" 
+						  allowfullscreen="" 
+						  loading="lazy" 
+						  referrerpolicy="no-referrer-when-downgrade">
+						</iframe>
 					  </aside>
+					  
 					<article class="col-lg-6">
 						<h2 id="contact">💬 Une question ? Un mot doux ?</h2>
 						<p class="mb-4">Écrivez-nous et l’équipe du Festival vous répondra avec plaisir ! Que ce soit pour des infos, des suggestions ou juste un petit message sympa 💌</p>
