--- a/article.html
+++ b/article.html
@@ -1,138 +1,153 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-	<title>A compléter !</title>
-		
-		<!--Metatags-->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		
-		<!--Open graph data-->
-		<meta property="og:title" content=""/>
-		<meta property="og:type" content=""/>
-		<meta property="og:url" content=""/>
-		<meta property="og:image" content=""/>
-		<meta property="og:description" content=""/>
-		
+	<title>Article | Festival des Films de Plein Air</title>
+
+	<!-- Metatags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Lisez les dernières actualités du Festival des Films de Plein Air : interviews, coulisses, avant-premières et plus encore.">
+	<meta name="keywords" content="cinéma plein air, festival Paris, film d’auteur, actualité cinéma, événement culturel">
+	<meta name="author" content="Université Côte d’Azur">
+
+	<!-- Open graph data -->
+	<meta property="og:title" content="Actualité | Festival des Films de Plein Air 2025" />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://www.festivalpleinair.com/article.html" />
+	<meta property="og:image" content="https://www.festivalpleinair.com/images/article_og.jpg" />
+	<meta property="og:description" content="Plongez dans l’univers du Festival à travers nos articles et reportages exclusifs sur le cinéma d’auteur en plein air." />
+
 	<!--fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
 	<!--CSS-->
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<!--<link rel="stylesheet" href="css/style.css">-->
-	<link rel="stylesheet" href="css/stylescss.css">
+	<link rel="stylesheet" href="css/stylescss_3.css">
 	<link rel="stylesheet"  href="webfonts/all.css">
-	
-
 </head>
 <body>
 
-	<!--00.header-->
-	<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
-		<a class="navbar-brand" href="index.html">
-			<img src="images/logo.jpg" width="100"/>
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-			<div class="navbar-nav ml-auto">
-			<a class="nav-item nav-link " href="index.html">accueil <span class="sr-only">(current)</span></a>
+<!--00.header-->
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
+	<a class="navbar-brand" href="index.html">
+		<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo Festival des Films de Plein Air" />
+	</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		<div class="navbar-nav ml-auto">
+			<a class="nav-item nav-link" href="index.html">Accueil</a>
 			<a class="nav-item nav-link" href="films.html">Les Films</a>
 			<a class="nav-item nav-link" href="index.html#booking">Réservation</a>
 			<a href="blog.html" class="active nav-item nav-link navLink">Actualités</a>
 			<a class="nav-item nav-link" href="contact.html">Contact</a>
-			</div>
 		</div>
-	</nav>
-	<!--end header-->
-    
-    <!--Article-->
-    <div class="container-fluid">
-        <div class="container article p-5">
-			<div class="row">
-					<h1>-Titre-</h1>
-			</div>
-			<div class="row justify-content-center">
-				<div class="firstImg col-md-6 "><img src="images/03-actu.jpg" class="img-fluid" alt=""></div>
-			</div>
-			<div class="row">
-				<div class="infoBlog pl-4 pt-5 ">-Info.- | Par Jennifer Vialet</div>
-			</div>
-			<div class="row">
-				<article>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis doloribus eius quis ea minima porro. Repellendus nemo, odio voluptate commodi totam soluta laborum quam id veniam quos autem aliquam quae.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis doloribus eius quis ea minima porro. Repellendus nemo, odio voluptate commodi totam soluta laborum quam id veniam quos autem aliquam quae.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis doloribus eius quis ea minima porro. Repellendus nemo, odio voluptate commodi totam soluta laborum quam id veniam quos autem aliquam quae.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis doloribus eius quis ea minima porro. Repellendus nemo, odio voluptate commodi totam soluta laborum quam id veniam quos autem aliquam quae.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis doloribus eius quis ea minima porro. Repellendus nemo, odio voluptate commodi totam soluta laborum quam id veniam quos autem aliquam quae.</p>
-				</article>
-			</div> 
-        </div>
-    </div>
-    <!--end Article-->
+	</div>
+</nav>
+<!--end header-->
 
-	<!--07.footer-->
-	<footer class="container-fluid footer">
-		<div class="container py-3">
-			<div class="row">
-				<div class="col-12 col-md-3">
-					<h2>Liens utiles</h2>
-					<div class="footerLinks">
-						<a href="index.html">Accueil</a>
-						<a href="films.html">Les Films</a>
-						<a href="blog.html">Actualités</a>
-						<a href="contact.html">Contact</a>
-						<a href="mentions-legales.html">Mentions légales</a>
-					</div>
-				</div>
-				<div class="col-12 col-md-3 address">
-					<h2>Contactez-nous</h2>
-					<div class="contactIcons mb-3">
-                        <p><span class="pr-3"><i class="fas fa-home"></i></span>-Adresse-</p>
-                        <p><span class="pr-3"><i class="fas fa-envelope"></i></span>-Mail-</p>
-                        <p><span class="pr-3"><i class="fas fa-phone"></i></span>-Tél.-</p>
-                    </div>
-				</div>
-				<div class="col-12 col-md-3 partenaire">
-					<h2>Partenariat</h2>
-					<div class="contactIcons mb-3">
-                        <ul>
-                            <li>-Partenaire 1-</li>
-                            <li>-Partenaire 1-</li>
-                            <li>-Partenaire 1-</li>
-                        </ul>
-					</div>
-				</div>
-                <div class="col-12 col-md-3 social">
-					<h2>Suivez-nous !</h2>
-					<div class="socialicons">
-						<a href="#"><i class="fab fa-facebook-f"></i></a>
-						<a href="#"><i class="fab fa-youtube"></i></a>
-						<a href="#"><i class="fab fa-instagram"></i></a>
-					</div>
-				</div>
-			</div>	
+<!--Article-->
+<div class="container-fluid">
+	<div class="container article p-5">
+		<div class="row">
+			<h1>Le Festival en Lumière : Retour sur l’ouverture</h1>
 		</div>
-		<div class="socketBkg ">
-            <div class="socket text-center">
-                <p>Copyright - Site réalisé par <br>
-                    Université Côte d'Azur - <a href="https://univ-cotedazur.fr/" target="_blank">Univ-Côte d'Azur</a></p>
-            </div>
-        </div>
-	</footer>
-	<!--end footer-->
+		<div class="row justify-content-center">
+			<div class="firstImg col-md-6 "><img src="images/actualites.jpg" class="img-fluid" alt="Ouverture du festival"></div>
+		</div>
+		<div class="row">
+			<div class="infoBlog pl-4 pt-5">Publié le 5 août 2025 | Par Jennifer Vialet</div>
+		</div>
+		<div class="row">
+			<article>
+				<p>Hier soir, le Parc Monceau a accueilli les cinéphiles venus assister à l’ouverture tant attendue du Festival des Films de Plein Air. Dans une ambiance chaleureuse, les spectateurs ont découvert le premier film de la sélection : un chef-d’œuvre du cinéma indépendant français, projeté sous les étoiles.</p>
+				<p>La cérémonie d’ouverture a débuté par un discours de la directrice artistique du festival, évoquant les valeurs de partage, de création et d’émotion qui animent cette édition 2025. Le public a ensuite pu profiter d’une projection en plein air avec un système sonore immersif et un écran géant au cœur du parc.</p>
+				<p>Des animations étaient également proposées tout au long de la soirée, notamment des stands gourmands, un espace photo vintage, et un mini-concert acoustique avant la tombée de la nuit.</p>
+				<p>Le festival se poursuit jusqu’au 7 août avec une programmation riche, incluant des courts-métrages, des avant-premières et des tables rondes avec des réalisateurs invités. Pour consulter le programme complet, rendez-vous sur la page <a href="films.html">Les Films</a>.</p>
+				<p>Restez connectés pour découvrir nos prochains articles, interviews et coups de cœur tout au long de cette édition magique !</p>
+			</article>
+		</div> 
+	</div>
+</div>
+<!--end Article-->
 
-	<!--Scroll to top button-->
-	<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
-	<!--End Scroll to top button-->
+<!--07.footer-->
+<footer class="container-fluid footer bg-dark text-white">
+	<div class="container py-5">
+		<div class="row gy-4">
 
-    <!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<script src="js/main.js"></script>	
+			<!-- 🎮 Présentation -->
+			<div class="col-12 col-md-3">
+				<h5>🎮 Festival Plein Air</h5>
+				<p>Du 5 au 7 août 2025, vivez l’expérience du cinéma d’auteur sous les étoiles, dans le cadre enchanteur du Parc Monceau à Paris.</p>
+			</div>
+
+			<!-- 🔗 Liens -->
+			<div class="col-6 col-md-2">
+				<h5>🔗 Liens</h5>
+				<ul class="list-unstyled footerLinks">
+					<li><a href="index.html">🏠 Accueil</a></li>
+					<li><a href="films.html">🎮 Les Films</a></li>
+					<li><a href="blog.html">📰 Actualités</a></li>
+					<li><a href="contact.html">✉️ Contact</a></li>
+					<li><a href="mentions-legales.html">⚖️ Mentions légales</a></li>
+				</ul>
+			</div>
+
+			<!-- 📞 Contact -->
+			<div class="col-6 col-md-3">
+				<h5>📞 Contact</h5>
+				<ul class="list-unstyled">
+					<li><i class="fas fa-map-marker-alt pr-2"></i> Parc Monceau, Paris</li>
+					<li><i class="fas fa-envelope pr-2"></i> contact@festivalpleinair.fr</li>
+					<li><i class="fas fa-phone pr-2"></i> +33 1 23 45 67 89</li>
+				</ul>
+			</div>
+
+			<!-- 🤝 Partenaires -->
+			<div class="col-12 col-md-4 text-center">
+				<h5>🤝 Partenaires</h5>
+				<div class="d-flex justify-content-center align-items-center flex-wrap gap-3 mt-3">
+					<a href="https://www.francetelevisions.fr/" target="_blank" class="logo-link">
+						<img src="images/imgTH.png" alt="France Télévisions" style="max-height: 40px;">
+					</a>
+					<a href="https://www.iledefrance.fr/" target="_blank" class="logo-link">
+						<img src="images/logo-region-ile-de-france.png" alt="Région Île-de-France" style="max-height: 40px;">
+					</a>
+					<a href="https://www.paris.fr/" target="_blank" class="logo-link">
+						<img src="images/Ville_de_Paris_logo_2019.svg" alt="Mairie de Paris" style="max-height: 40px;">
+					</a>
+				</div>
+			</div>
+
+			<!-- 📣 Réseaux sociaux -->
+			<div class="col-12 text-center mt-4">
+				<h5>📣 Suivez-nous</h5>
+				<div class="socialicons d-flex justify-content-center gap-3 mt-2">
+					<a href="https://fr-fr.facebook.com" title="Facebook"><i class="fab fa-facebook-f fa-lg"></i></a>
+					<a href="https://www.youtube.com" title="YouTube"><i class="fab fa-youtube fa-lg"></i></a>
+					<a href="https://www.instagram.com" title="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<!-- 🔻 Bas de page -->
+	<div class="socketBkg bg-secondary text-center py-3">
+		<p class="mb-0 small">© 2025 Festival des Films de Plein Air — Design par Université Côte d’Azur</p>
+	</div>
+</footer>
+<!--end footer-->
+
+<!--Scroll to top button-->
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
+<!--End Scroll to top button-->
+
+<!-- Optional JavaScript -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
