--- a/blog.html
+++ b/blog.html
@@ -10,18 +10,18 @@
 		<meta name="description" content="">
 		
 		<!--Open graph data-->
-		<meta property="og:title" content=""/>
-		<meta property="og:type" content=""/>
-		<meta property="og:url" content=""/>
-		<meta property="og:image" content=""/>
-		<meta property="og:description" content=""/>
+		<meta property="og:title" content="Actualités | Festival des Films de Plein Air 2025" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.festivalpleinair.com/blog.html" />
+		<meta property="og:image" content="https://www.festivalpleinair.com/images/og_blog.jpg" />
+		<meta property="og:description" content="Suivez les dernières nouvelles du Festival à Paris : projections en plein air, rencontres exclusives avec les réalisateurs et bien plus encore." />
 		
 	<!--fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
 	<!--CSS-->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!--<link rel="stylesheet" href="css/style.css">-->
-	<link rel="stylesheet" href="css/stylescss.css">
+	<link rel="stylesheet" href="css/stylescss_3.css">
 	<link rel="stylesheet"  href="webfonts/all.css">
 	
 
