--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<title>Contact | Festival des Films de Plein Air</title>
 		
@@ -10,11 +10,11 @@
 		<meta name="description" content="">
 		
 		<!--Open graph data-->
-		<meta property="og:title" content=""/>
-		<meta property="og:type" content=""/>
-		<meta property="og:url" content=""/>
-		<meta property="og:image" content=""/>
-		<meta property="og:description" content=""/>
+		<meta property="og:title" content="Contactez-nous | Festival des Films de Plein Air"/>
+		<meta property="og:type" content="website"/>
+		<meta property="og:url" content="https://www.festivalpleinair.com/contact.html"/>
+		<meta property="og:image" content="https://www.festivalpleinair.com/images/og-contact.jpg"/>
+		<meta property="og:description" content="Une question ? Une demande de partenariat ou d'information ? Contactez l'équipe du Festival des Films de Plein Air à Paris du 5 au 7 août 2025."/>
 
 
 	<!--fonts-->
@@ -22,7 +22,7 @@
 	<!--CSS-->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!--<link rel="stylesheet" href="css/style.css">-->
-	<link rel="stylesheet" href="css/stylescss.css">
+	<link rel="stylesheet" href="css/stylescss_3.css">
 	<link rel="stylesheet"  href="webfonts/all.css">
 	
 
@@ -52,7 +52,15 @@
 	<!--end header-->
 	<!--Map-->
 	<section class="container-fluid">
-		<iframe src="images/Carte.jpg" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<iframe 
+						  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.843236364008!2d2.3091703767124353!3d48.87914237133659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fdf18a65e9f%3A0x1a8d022eab6740ef!2sParc%20Monceau!5e0!3m2!1sfr!2sfr!4v1712593629852!5m2!1sfr!2sfr" 
+						  width="100%" 
+						  height="350" 
+						  style="border:0;" 
+						  allowfullscreen="" 
+						  loading="lazy" 
+						  referrerpolicy="no-referrer-when-downgrade">
+						</iframe>
     </section>
 	<section class="container-fluid contactPage">
 		<div class="container py-5">
@@ -113,9 +121,7 @@
 		</div>
 	</section>
 	
-	
 
-	<!--07.footer-->
 	<!--07.footer-->
 <footer class="container-fluid footer bg-dark text-white">
 	<div class="container py-5">
