--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<title>Accueil | Festival des Films de Plein Air</title>
-		<html lang="fr">
+		
 		<!--Metatags-->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Festival de films d’auteur en plein air au Parc Monceau à Paris, du 5 au 7 août, sur le thème du voyage.">
 		
 		<!--Open graph data-->
-		<meta property="og:title" content=""/>
-		<meta property="og:type" content=""/>
-		<meta property="og:url" content=""/>
-		<meta property="og:image" content=""/>
-		<meta property="og:description" content=""/>
+		<meta property="og:title" content="Festival des Films de Plein Air - Paris 2025"/>
+		<meta property="og:type" content="website"/>
+		<meta property="og:url" content="https://www.festivalpleinair.com"/>
+		<meta property="og:image" content="https://www.festivalpleinair.com/images/og-cover.jpg"/>
+		<meta property="og:description" content="Vivez l’expérience magique du cinéma d’auteur sous les étoiles, du 5 au 7 août 2025 au Parc Monceau. Découvrez la programmation et réservez dès maintenant."/>
 
 		<!--fonts-->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
@@ -134,41 +134,41 @@
 					</div>-->
 					<div class="col-12"><h2 id="movie">>Notre sélection 2025 : Le Voyage</h2></div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
-						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film"></a>
+						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film" style="height: 98%;" width="100%"></a>
 						
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
-						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt="Into the Wild"></a>
+						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt="Into the Wild" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt="The Secret Life of Walter Mitty"></a>
+						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt="The Secret Life of Walter Mitty" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class=" col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt="L'Auberge Espagnole"></a>
+						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt="L'Auberge Espagnole" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt="Tracks"></a>
+						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt="Tracks" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt="Le Grand Voyage"></a>
+						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt="Le Grand Voyage" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt="The Motorcycle Diaries (Carnets de voyage)"></a>
+						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt="The Motorcycle Diaries (Carnets de voyage)" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt="Before Sunrise"></a>
+						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt="Before Sunrise" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt="Lost in Translation"></a>
+						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt="Lost in Translation" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt="Paris, Texas"></a>
+						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt="Paris, Texas" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt="La Route d’Istanbul"></a>
+						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt="La Route d’Istanbul" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="Wild"></a>
+						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="Wild" style="height: 98%;" width="100%"></a>
 					</div>
 				</div>
 			</div>
