--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<title>Actualités | Festival des Films de Plein Air</title>
 		
@@ -31,8 +31,8 @@
 
 	<!--00.header-->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
-		<a class="navbar-brand" href="index.html">
-			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" />
+		<a class="navbar-brand" href="#">
+			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival" />
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
             </div>
             <div class="row  justify-content-center">
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/air.jpg" alt="un lieu en air">
+                    <img class="card-img-top" src="images/air2.jpg" alt="un lieu en air"  style="height: 32%;">
                     <div class="card-body">
                         <h5 class="card-title">📅 Le festival ouvre ses portes le 5 août</h5>
 						<p class="infoBlog">5 avril 2025 | Par Jennifer Viala</p>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/air2.jpg" alt="un lieu en air">
+                    <img class="card-img-top" src="images/14.jpg" alt="12 films du thème Voyage"style="height: 32%;" >
                     <div class="card-body">
 						<h5 class="card-title">🎬 Les 12 films du thème “Voyage” sont dévoilés</h5>
 						<p class="infoBlog">4 avril 2025 | Par Jennifer Viala</p>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/air3.jpg" alt="un lieu en air">
+                    <img class="card-img-top" src="images/convention.jpg" alt="Partenaires officiels confirmés"   style="height: 32%;"  >
                     <div class="card-body">
 						<h5 class="card-title">🎉 Partenaires officiels confirmés</h5>
 						<p class="infoBlog">3 avril 2025 | Par Jennifer Viala</p>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/age.webp" alt="un homme tient des ballons colorées">
+                    <img class="card-img-top" src="images/age.webp" alt="un homme tient des ballons colorées" style="height: 30%;">
                     <div class="card-body">
                         <h5 class="card-title">👨‍👩‍👧‍👦 Un événement pour tous les âges</h5>
 						<p class="infoBlog">28 mars 2025 | Par Jennifer Viala</p>
@@ -174,9 +174,9 @@
 		<div class="col-12 text-center mt-4">
 		  <h5>📣 Suivez-nous</h5>
 		  <div class="socialicons d-flex justify-content-center gap-3 mt-2">
-			<a href="https://www.facebook.com"><i class="fab fa-facebook-f fa-lg"></i></a>
-			<a href="https://www.youtube.com"><i class="fab fa-youtube fa-lg"></i></a>
-			<a href="https://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
+			<a href="https://www.facebook.com"  aria-label="Facebook"><i class="fab fa-facebook-f fa-lg"></i></a>
+			<a href="https://www.youtube.com"  aria-label="Youtube"><i class="fab fa-youtube fa-lg"></i></a>
+			<a href="https://www.instagram.com"  aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
 		  </div>
 		</div>
   
