--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,8 @@
 
 	<!--00.header-->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
-		<a class="navbar-brand" href="index.html">
-			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" />
-
+		<a class="navbar-brand" href="#">
+			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival" />
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -59,7 +58,8 @@
 						  style="border:0;" 
 						  allowfullscreen="" 
 						  loading="lazy" 
-						  referrerpolicy="no-referrer-when-downgrade">
+						  referrerpolicy="no-referrer-when-downgrade"
+						  title="Carte du Parc Monceau, lieu du Festival de Films de Plein Air">
 						</iframe>
     </section>
 	<section class="container-fluid contactPage">
@@ -175,9 +175,9 @@
 		<div class="col-12 text-center mt-4">
 		  <h5>📣 Suivez-nous</h5>
 		  <div class="socialicons d-flex justify-content-center gap-3 mt-2">
-			<a href="https://fr-fr.facebook.com"><i class="fab fa-facebook-f fa-lg"></i></a>
-			<a href="https://www.youtube.com"><i class="fab fa-youtube fa-lg"></i></a>
-			<a href="https://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
+			<a href="https://www.facebook.com"  aria-label="Facebook"><i class="fab fa-facebook-f fa-lg"></i></a>
+			<a href="https://www.youtube.com"  aria-label="Youtube"><i class="fab fa-youtube fa-lg"></i></a>
+			<a href="https://www.instagram.com"  aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
 		  </div>
 		</div>
   
