--- a/films.html
+++ b/films.html
@@ -52,7 +52,7 @@
     
 	
 	<div class="jumbotron text-center">
-		<span >-Bandeau informations-</span>
+		<span>✨ Chaque soir, une histoire à vivre ensemble</span>
 	</div>
 	<section class="container-fluid filmlist">
 		<div class="container">
@@ -140,7 +140,7 @@
 	</section>
 
 	<div class="jumbotron text-center">
-		<span> -Bandeau informations- </span>
+		<span>🎬 Sous le ciel étoilé, laissez-vous emporter par le cinéma</span>
 	</div>
 	<section class="container-fluid filmlist">
 		<div class="container">
@@ -230,7 +230,7 @@
 	</section>
 	
 	<div class="jumbotron text-center">
-		<span >-Bandeau informations-</span>
+		<span>🍃 Le vent souffle, l’écran s’illumine… bienvenue au festival.</span>
 	</div>
 	<section class="container-fluid filmlist">
 		<div class="container">
@@ -320,7 +320,7 @@
 	</section>
 
 	<div class="jumbotron text-center">
-			<span >-Bandeau informations-</span>
+		<span>🌙 Fermez les yeux… le film commence, le ciel nous éclaire.</span>
 		</div>
 		<section class="container-fluid filmlist">
 			<div class="container">
