--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -138,10 +138,10 @@
 		<div class="col-12 text-center mt-4">
 		  <h5>📣 Suivez-nous</h5>
 		  <div class="socialicons d-flex justify-content-center gap-3 mt-2">
-			<a href="https://fr-fr.facebook.com"><i class="fab fa-facebook-f fa-lg"></i></a>
-			<a href="https://www.youtube.com"><i class="fab fa-youtube fa-lg"></i></a>
-			<a href="https://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
-		  </div>
+        <a href="https://www.facebook.com"  aria-label="Facebook"><i class="fab fa-facebook-f fa-lg"></i></a>
+        <a href="https://www.youtube.com"  aria-label="Youtube"><i class="fab fa-youtube fa-lg"></i></a>
+        <a href="https://www.instagram.com"  aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+        </div>
 		</div>
   
 	  </div>
