--- a/article.html
+++ b/article.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="fr">
 <head>
 	<title>Article | Festival des Films de Plein Air</title>
@@ -28,8 +27,8 @@
 
 <!--00.header-->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
-	<a class="navbar-brand" href="index.html">
-		<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo Festival des Films de Plein Air" />
+	<a class="navbar-brand" href="#">
+		<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival" />
 	</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -124,10 +123,10 @@
 			<div class="col-12 text-center mt-4">
 				<h5>📣 Suivez-nous</h5>
 				<div class="socialicons d-flex justify-content-center gap-3 mt-2">
-					<a href="https://fr-fr.facebook.com" title="Facebook"><i class="fab fa-facebook-f fa-lg"></i></a>
-					<a href="https://www.youtube.com" title="YouTube"><i class="fab fa-youtube fa-lg"></i></a>
-					<a href="https://www.instagram.com" title="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
-				</div>
+					<a href="https://www.facebook.com"  aria-label="Facebook"><i class="fab fa-facebook-f fa-lg"></i></a>
+					<a href="https://www.youtube.com"  aria-label="Youtube"><i class="fab fa-youtube fa-lg"></i></a>
+					<a href="https://www.instagram.com"  aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+				  </div>
 			</div>
 
 		</div>
