--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
 						  style="border:0;" 
 						  allowfullscreen="" 
 						  loading="lazy" 
-						  referrerpolicy="no-referrer-when-downgrade">
+						  referrerpolicy="no-referrer-when-downgrade"
+						  title="Carte du Parc Monceau, lieu du Festival de Films de Plein Air">
 						</iframe>
 					  </aside>
 					  
