--- a/index.html
+++ b/index.html
@@ -141,34 +141,34 @@
 						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt="Into the Wild" style="height: 98%;" width="100%"></a>
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt="The Secret Life of Walter Mitty" style="height: 98%;" width="100%"></a>
+						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt="The Secret Life of Walter Mitty" style="height: 98%;" width="100%"loading="lazy"></a>
 					</div>
 					<div class=" col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt="L'Auberge Espagnole" style="height: 98%;" width="100%"></a>
+						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt="L'Auberge Espagnole" style="height: 98%;" width="100%"loading="lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt="Tracks" style="height: 98%;" width="100%"></a>
+						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt="Tracks" style="height: 98%;" width="100%"loading="lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt="Le Grand Voyage" style="height: 98%;" width="100%"></a>
+						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt="Le Grand Voyage" style="height: 98%;" width="100%"loading="lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt="The Motorcycle Diaries (Carnets de voyage)" style="height: 98%;" width="100%"></a>
+						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt="The Motorcycle Diaries (Carnets de voyage)" style="height: 98%;" width="100%"loading="lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt="Before Sunrise" style="height: 98%;" width="100%"></a>
+						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt="Before Sunrise" style="height: 98%;" width="100%"loading="lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt="Lost in Translation" style="height: 98%;" width="100%"></a>
+						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt="Lost in Translation" style="height: 98%;" width="100%"loading="lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt="Paris, Texas" style="height: 98%;" width="100%"></a>
+						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt="Paris, Texas" style="height: 98%;" width="100%" loading="lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt="La Route d’Istanbul" style="height: 98%;" width="100%"></a>
+						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt="La Route d’Istanbul" style="height: 98%;" width="100%" loading="lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="Wild" style="height: 98%;" width="100%"></a>
+						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="Wild" style="height: 98%;" width="100%" loading="lazy"></a>
 					</div>
 				</div>
 			</div>
